--- a/runway/index.html
+++ b/runway/index.html
@@ -15,7 +15,7 @@
     <div class="inner">
         <div class="title"><h2><img src="misc/title.png" alt=""></h2></div>
         <div class="desc">
-          <p>填写信息 <br/> 即刻申请领取5ml体验装</p>
+          <p><img src="misc/idesc.png" alt=""></p>
           <a href="/rule.html">活动详情</a>
         </div>
       </div>
@@ -23,7 +23,7 @@
         <div class="inner">
           <form action="#" method="post">
             <div class="input-wrap">
-              <label for="phone">手机</label>
+              <label class="label-phone" for="phone">手机</label>
               <input type="number" name="phone" class="input input-phone" />
             </div>
             <div class="input-wrap">
