--- a/runway/rule.html
+++ b/runway/rule.html
@@ -19,9 +19,12 @@
       <div class="rule">
         <div class="inner">
             <h3>活动详情</h3>
-            <h4>活动机制</h4>
-            <p>完善相关申领信息，申请领取5ml体验装，申请成功后，凭手机确认短信至申请柜台领取。 <br /> 数量有限，领完即止。</p>
-            <span>本活动最终解释权归阿玛尼美妆所有</span>
+            <ul>
+              <li>1.&nbsp;&nbsp;&nbsp;&nbsp;完善相关申领信息，凭短信7日内回柜即可领取大师 </li>
+              <li>2.&nbsp;&nbsp;&nbsp;&nbsp;体验装数量有限，领完即止</li>
+              <li>3.&nbsp;&nbsp;&nbsp;&nbsp;1个手机号码仅可参与1次活动</li>
+            </ul>
+            <span>*本活动最终解释权归阿玛尼美妆所有</span>
         </div>
         <div class="input-wrap action-wrap">
           <button type="button" onclick="goHome();">确定</button>
