--- a/runway/success.html
+++ b/runway/success.html
@@ -19,7 +19,7 @@
       <div class="success">
         <div class="inner">
           <span>恭喜您，申领成功！</span>
-          <p>请至柜台凭手机短信领取</p>
+          <p>请凭短信于7日内至所选柜台领取</p>
         </div>
         <div class="input-wrap action-wrap">
           <button type="button" onclick="goHome()">确定</button>
